syntax = "proto3";
package myPackage;

message DATA {
  double x_axis = 1;
  double y_axis = 2;
}

message DATAPACK{
  uint32 cmd = 1;
  repeated DATA data = 2;
}
